--- a/Borrador.csproj
+++ b/Borrador.csproj
@@ -67,6 +67,12 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Modulo11.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Modulo11.Designer.cs">
+      <DependentUpon>Modulo11.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UCAdmisionHospitalaria.cs">
@@ -82,9 +88,6 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UCEstudiosImagen.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="UCFacturacion.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UCHojaEnfermeria.cs">
@@ -105,6 +108,9 @@
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Modulo11.resx">
+      <DependentUpon>Modulo11.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -115,9 +121,6 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="UCFacturacion.resx">
-      <DependentUpon>UCFacturacion.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="UCOrdenLaboratorio.resx">
       <DependentUpon>UCOrdenLaboratorio.cs</DependentUpon>
     </EmbeddedResource>
